2000-04-13  James Henstridge  <james@daa.com.au>

	* lib/dia_image.c (dia_image_draw): use the new enumeration values
	from after the gdk-pixbuf cleanup.

	* lib/geometry.c (bez_point_distance_and_ray_crosses): fix up limit
	on for loop.  Last set of coefficients were not beeing calculated,
	which caused a bit of breakage.

	* lib/bezier_conn.c (bezierconn_closest_segment): use the new
	functions in geometry.c for calculating the closest segment.
	(bezierconn_distance_from): use distance_bez_line_point to calculate
	the distance.

	* lib/geometry.c (distance_bez_line_point): new function to calculate
	the distance from an open bezier line to a point.
	(distance_bez_shape_point): new function to calculate the distance
	from a closed bezier shape.
	(distance_ellipse_point): new function to calculate the distance from
	a filled ellipse to a point.

	* lib/geometry.h (BezPoint): moved this structure here from render.h

2000-04-12  James Henstridge  <james@daa.com.au>

	* lib/geometry.c (distance_bez_seg_point): new function to calculate
	the distance from a bezier segment.

	* lib/polyshape.c (polyshape_distance_from): use distance_polygon_point
	to calculate the distance from the object.

	* lib/geometry.c (distance_polygon_point): function for calculating
	the distance from a polygon to a point.

2000-04-12  Cyrille Chepelov  <chepelov@calixo.net>

	* app/interface.c:
	* lib/sheet.[ch]: added a <br/> tag in sheet files, so that line 
	breaks can be inserted in the tool box. 

	* doc/sheet.dtd: updated the DTD
	* sheets/GRAFCET.sheet: tried <br/> on that sheet (more to come).
	
2000-04-12  James Henstridge  <james@daa.com.au>

	* app/plugin-manager.c (get_plugin_manager): use the GTK_DIALOG
	macro if the dialog is a GtkDialog :(

2000-04-11  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>

	* objects/standard/polygon.c: Connectionpoints now properly
	managed in a GList.  As far as I can tell, this will not dieturb
	the order (but I have the nagging doubt...)
